fix: some ugly view on mobile

--- a/static/css/board-layout.css
+++ b/static/css/board-layout.css
@@ -107,4 +107,7 @@ button.current-index {
     .markdown blockquote {
         margin: unset;
     }
+    #list .head {
+        padding: 3px;
+    }
 }
