--- a/static/css/index.css
+++ b/static/css/index.css
@@ -56,6 +56,6 @@
         height: unset;
     }
     #recent-magazines {
-        height: 70%;
+        height: 150px;
     }
 }
